--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.0.0",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "emailjs-com": "^2.6.3",
     "react": "^16.13.1",
+    "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-hook-form": "^6.9.2",
+    "react-scripts": "3.4.3",
+    "sweetalert2": "^10.5.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
