--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
     "sweetalert2": "^10.5.1",
     "yup": "^0.29.3"
   },
